--- a/style.css
+++ b/style.css
@@ -180,9 +180,11 @@ html{
     background-size: cover;
     background-position: center;
     position: relative;
+    -webkit-mask-image: linear-gradient(rgba(0,0,0,1) 85%,rgba(0,0,0,0));
+    mask-image: linear-gradient(rgba(0,0,0,1) 85%,rgba(0,0,0,0));
 }
 
-.hero::after{
+/* .hero::after{
     content: "";
     display: block;
     position: absolute;
@@ -190,11 +192,25 @@ html{
     width: 100%;
     height: 30%;
     background: linear-gradient(0deg, rgba(1, 1, 3,1)8%, rgba(255,255,255,0)50%);
+} */
+
+.hero .mask-container{
+    position: absolute;
+    /* background-color: salmon; */
+    mask-image: url('Media/hero_coffee.svg');
+    mask-repeat: no-repeat;
+    mask-size: cover;
+    mask-position: center;
+    inset: 0;
 }
 
 .hero .content{
     padding: 1.4rem 7%;
-    max-width: 60rem;
+    /* max-width: 60rem; */
+    width: 100%;
+    text-align: center;
+    position: fixed;
+    top: 150px;
 }
 .hero .content h1{
     font-size: 5rem;
@@ -251,6 +267,10 @@ html{
 
 .about .row .about-img img{
     width: 100%;
+    mask-image: url(Media/coffe_beanssvg.svg);
+    mask-size: 50%;
+    mask-position: center;
+    mask-repeat: no-repeat;
 }
 
 .about .row .content{
@@ -469,8 +489,7 @@ footer .credit a{
     left: 0;
     top: 0;
     width: 100%;
-    height: 60%;
-    overflow: auto;
+    height: 100%;
     background-color: rgba(1, 1, 1, 0.7);
     display: none;
 }
@@ -483,6 +502,7 @@ footer .credit a{
     padding: 1.2rem;
     border: 1px solid #666;
     width: 80%;
+    overflow: auto;
     animation: animateModal 0.5s;
 }
 
