--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ html{
     background-size: cover;
     background-position: center;
     position: relative;
-    -webkit-mask-image: linear-gradient(rgba(0,0,0,1) 85%,rgba(0,0,0,0));
+    /* -webkit-mask-image: linear-gradient(rgba(0,0,0,1) 85%,rgba(0,0,0,0)); */
     mask-image: linear-gradient(rgba(0,0,0,1) 85%,rgba(0,0,0,0));
 }
 
@@ -384,11 +384,7 @@ html{
     font-size: 1.3rem;
     font-weight: bold;
 }
-.products .product-price span{
-    text-decoration: line-through;
-    font-size: 1rem;
-    font-weight: 500;
-}
+
 /* Contact Section */
 
 .contact .row {
@@ -498,7 +494,7 @@ footer .credit a{
     position: relative;
     background-color: #fefefe;
     color: var(--bg);
-    margin: 15% auto;
+    margin: 5% auto;
     padding: 1.2rem;
     border: 1px solid #666;
     width: 80%;
